--- a/app.css
+++ b/app.css
@@ -50,6 +50,9 @@ ul {
 }
 ul li {
   padding: 1em;
+  text-transform: uppercase;
+  font-weight: bold;
+  color:#1e7eb7;
   background: #fff;
   border-radius: .2em;
   border: solid 1px rgba(88, 183, 205, .2);
@@ -67,7 +70,7 @@ button {
 header {
   text-align: center;
   background: linear-gradient(90deg, #d4eece, #55b3d0, #1e7eb7),
-              url('../images/header-bg.jpg') no-repeat;
+              url('../images/header.png') no-repeat;
               background-blend-mode: multiply;    
               background-size: cover;   
 }
@@ -75,6 +78,7 @@ header input {
   padding: 12px;
   font-size: 1.15em;
   width: 100%;
+  text-transform: uppercase;
 }
 li span, 
 li input[type=text] {
